--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
 <body>
 	<div class="container">
 		<div class="navbar">
-			<img src="media/logo.jpg" class="logo">
+			<img src="logo.jpg" class="logo">
 			<div class="content">
 				<div class="right-col">
 					<p><b>A Song for You,</b></p> <br/>
 					<h2>Click Here To Listen</h2>
-					<img src="media/play.png" id="icon">
+					<img src="play.png" id="icon">
 				</div>
 			</div>
 		</div>
 	</div>
 	
 	<audio id="mySong">
-		<source src="media/mysong.mp3" type="audio/mp3">
+		<source src="mysong.mp3" type="audio/mp3">
 	</audio>
 	
 	<script>
@@ -28,10 +28,10 @@
 		icon.onclick = function() {
 			if(mysong.paused) {
 				mysong.play();
-				icon.src = "media/pause.png";
+				icon.src = "pause.png";
 			}else {
 				mysong.pause();
-				icon.src = "media/play.png";
+				icon.src = "play.png";
 			}
 		}
 		
