--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Valentine's Gift</title>
+	<title>Be my Valentine</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
